[gd_scene load_steps=57 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (1).png" type="Texture" id=2]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (2).png" type="Texture" id=3]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (3).png" type="Texture" id=4]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (4).png" type="Texture" id=5]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (5).png" type="Texture" id=6]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (6).png" type="Texture" id=7]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (7).png" type="Texture" id=8]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (8).png" type="Texture" id=9]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (9).png" type="Texture" id=10]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (10).png" type="Texture" id=11]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (11).png" type="Texture" id=12]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (12).png" type="Texture" id=13]
[ext_resource path="res://PNGs/knightIDLEright/knightIDLEright (13).png" type="Texture" id=14]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (7).png" type="Texture" id=15]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (8).png" type="Texture" id=16]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (1).png" type="Texture" id=17]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (2).png" type="Texture" id=18]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (3).png" type="Texture" id=19]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (4).png" type="Texture" id=20]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (5).png" type="Texture" id=21]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (6).png" type="Texture" id=22]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (9).png" type="Texture" id=23]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (10).png" type="Texture" id=24]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (11).png" type="Texture" id=25]
[ext_resource path="res://PNGs/knightWALKright/knightWALKright (12).png" type="Texture" id=26]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (5).png" type="Texture" id=27]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (6).png" type="Texture" id=28]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (7).png" type="Texture" id=29]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (8).png" type="Texture" id=30]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (9).png" type="Texture" id=31]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (10).png" type="Texture" id=32]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (11).png" type="Texture" id=33]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (12).png" type="Texture" id=34]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (13).png" type="Texture" id=35]
[ext_resource path="res://PNGs/knightATTACKright/knightATTACKright (14).png" type="Texture" id=36]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect000.png" type="Texture" id=37]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect001.png" type="Texture" id=38]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect002.png" type="Texture" id=39]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect003.png" type="Texture" id=40]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect004.png" type="Texture" id=41]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect005.png" type="Texture" id=42]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect006.png" type="Texture" id=43]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect007.png" type="Texture" id=44]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect008.png" type="Texture" id=45]
[ext_resource path="res://PNGs/explosionV001effect/explosionV001effect009.png" type="Texture" id=46]
[ext_resource path="res://PNGs/bloodsplatterV002effect/bloodsplatterV002effect000.png" type="Texture" id=47]
[ext_resource path="res://PNGs/bloodsplatterV002effect/bloodsplatterV002effect001.png" type="Texture" id=48]
[ext_resource path="res://PNGs/bloodsplatterV002effect/bloodsplatterV002effect002.png" type="Texture" id=49]
[ext_resource path="res://PNGs/bloodsplatterV002effect/bloodsplatterV002effect003.png" type="Texture" id=50]
[ext_resource path="res://PNGs/bloodsplatterV002effect/bloodsplatterV002effect004.png" type="Texture" id=51]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": true,
"name": "attack",
"speed": 27.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "die",
"speed": 25.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 18.3563, 25.0805 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 49.0535, 20.6206 )

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [  ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ) ],
"loop": true,
"name": "bleed",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 19.6044, 25.8968 )

[node name="player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"
frame = 11
offset = Vector2( 25, 0 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 10.5 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="2"]

position = Vector2( -3.13754, -1.79453 )
scale = Vector2( 7.42497, 4.2656 )
z_index = 110
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 2, 2 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit", "Offset", "Smoothing", "Z Index" ]

[node name="HitTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="rightattack" type="Area2D" parent="." index="4"]

position = Vector2( -4, -0.250343 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightattack" index="0"]

modulate = Color( 1, 0.03125, 0.939453, 1 )
position = Vector2( 73, 6.92508 )
scale = Vector2( 1, 0.861999 )
shape = SubResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="rightsprite" type="AnimatedSprite" parent="rightattack" index="1"]

position = Vector2( 81.0544, 9.52948 )
scale = Vector2( 2.35869, 2.40641 )
frames = SubResource( 4 )
animation = "empty"
playing = true

[node name="leftattack2" type="Area2D" parent="." index="5"]

position = Vector2( 3, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftattack2" index="0"]

modulate = Color( 1, 0.03125, 0.939453, 1 )
position = Vector2( -71, 6.92508 )
scale = Vector2( 1, 0.861999 )
shape = SubResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="leftsprite" type="AnimatedSprite" parent="leftattack2" index="1"]

position = Vector2( -74.9457, 9.52948 )
scale = Vector2( 2.35869, 2.40641 )
frames = SubResource( 4 )
animation = "empty"
playing = true

[node name="hitbox" type="Area2D" parent="." index="6"]

self_modulate = Color( 1, 0, 0, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox" index="0"]

modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.3, 10.4422 )
shape = SubResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_player_animation_finished"]

[connection signal="area_entered" from="rightattack" to="." method="_on_rightattack_area_entered"]

[connection signal="body_entered" from="rightattack" to="." method="_on_right_body_entered"]

[connection signal="body_exited" from="rightattack" to="." method="_on_right_body_exited"]

[connection signal="body_entered" from="leftattack2" to="." method="_on_left_body_entered"]

[connection signal="body_exited" from="leftattack2" to="." method="_on_left_body_exited"]

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]


